--- a/src/components/DemosProjects/DemoCard/DemoCard.scss
+++ b/src/components/DemosProjects/DemoCard/DemoCard.scss
@@ -20,6 +20,7 @@
       // height: 201px !important;
       // aspect-ratio: 17 / 10;
       cursor: pointer;
+
       border-radius: 10px;
     }
 
@@ -55,7 +56,7 @@
       }
     }
 
-    a.demo-card {
+    div.demo-card {
       position: relative;
       // margin: 20px;
       cursor: pointer;
