--- a/src/components/ServiceOffer/ServiceOffer.scss
+++ b/src/components/ServiceOffer/ServiceOffer.scss
@@ -1,5 +1,6 @@
 section.services-Offer {
   .services-Wrapper {
+    max-width: 1255px;
     display: flex;
     flex-direction: column;
     width: 100%;
