--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -5,10 +5,11 @@ footer {
     flex-direction: column;
     position: relative;
     z-index: 2;
-    background-color: rgba(51, 197, 136, 1);
+    background-color: #086453;
     gap: 5px;
     padding-top: 10px;
     padding-bottom: 10px;
+    color: azure;
     div {
       margin-top: 6px;
     }
@@ -22,11 +23,11 @@ footer {
 
     a:hover {
       cursor: pointer;
-      color: rgb(43, 53, 44);
+      // color: rgb(43, 53, 44);
     }
     a {
       font-size: 30px;
-      color: rgb(27, 27, 36);
+      // color: rgb(27, 27, 36);
       margin-left: 12px;
     }
   }
