--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,5 +1,8 @@
 .contact-section {
   padding-bottom: 0 !important;
+
+  z-index: 3 !important;
+
   .contact-text {
     margin: 0 !important;
     padding-top: 10px;
