--- a/src/components/SkillStack/SkillStack.scss
+++ b/src/components/SkillStack/SkillStack.scss
@@ -1,6 +1,6 @@
 div#skill-stack-section {
   padding: 0;
-
+  z-index: 2;
   width: 100%;
   .main-content-wrapper {
     background-color: var(--second-bg-color);
