--- a/src/components/FramerAnimation/LeafAnimationTitle.scss
+++ b/src/components/FramerAnimation/LeafAnimationTitle.scss
@@ -34,17 +34,12 @@ section.about-section {
   }
 }
 
+.svg-wrapper-leaf {
+  display: none;
+}
+
 @media only screen and (max-width: 590px) {
   .svg-wrapper-leaf {
     display: none;
-    z-index: 0;
-    background-color: transparent;
-    width: calc(100% + 440px);
-    position: absolute;
-    bottom: 44%;
-    left: -400px;
-    svg {
-      width: 100%;
-    }
   }
 }
