--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,13 +1,5 @@
 .contact-section {
   padding-bottom: 0 !important;
-
-  z-index: 3 !important;
-
-  .contact-text {
-    margin: 0 !important;
-    padding-top: 10px;
-  }
-
   .svg-wrapper {
     background-color: var(--second-bg-color);
     .svg-section-transition {
@@ -19,250 +11,72 @@
       }
     }
   }
-  .contact-content-wrapper {
-    width: 100%;
+  .svg-wrapper-bottom {
     background-color: var(--third-bg-color);
-    padding-bottom: 2rem;
-  }
 
-  .contact-container {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    .contact-canvas {
-      // background-color: aqua;
-      max-width: 400px;
-      // max-height: 400px;
-      height: 570px !important;
-      canvas {
-        width: 350px !important;
-      }
-    }
-
-    .form-wrapper-anim {
-      max-width: 70%;
-      margin-top: 70px;
-    }
-
-    div.form-wrapper {
-      margin-top: 20px;
-    }
-
-    div.form-wrapper,
-    .form-wrapper-anim {
-      display: flex;
-      flex-direction: column;
-      // align-items: flex-start;
-      //  max-width: 600px;
-      // max-width: 950px;
+    .svg-section-transition-bottom {
       width: 100%;
-      margin-left: 10px;
-
-      .contact-form {
-        display: flex;
-        flex-direction: column;
-
-        h3 {
-          font-weight: 600;
-          font-size: 20px;
-          margin-bottom: 5px;
-          margin-top: 20px;
-        }
-        hr {
-          border: none;
-          width: 400px;
-          height: 5px;
-          background-color: #006451;
-          border-radius: 10px;
-          margin-bottom: 20px;
-        }
-
-        // align-items: flex-start;
-        // gap: 20px;
-        .input-wrapper {
-          position: relative;
-          margin-bottom: 2rem;
-
-          input,
-          textarea,
-          label {
-            font-size: 1rem;
-            // width: 100%;
-            // padding: 4px;
-          }
-
-          label {
-            position: absolute;
-            z-index: 0;
-            top: 0;
-            left: 0;
-            color: #424242;
-            display: flex;
-            align-items: center;
-            transition: 0.2s ease;
-            margin: 10px 15px;
-            padding: 0 10px;
-            background-color: var(--third-bg-color);
-            // background-color: blue;
-          }
-          textarea {
-            height: 300px;
-          }
-          input,
-          textarea {
-            position: relative;
-            z-index: 1;
-            // background-color: #2a2a2a;
-            background-color: transparent;
-            width: 100%;
-            // color: #666;
-            color: rgba(255, 255, 255, 0.4);
-            font-size: 1rem;
-            font-weight: 300;
-            padding: 10px 20px;
-            border: 0;
-            border: 1px solid rgba(231, 231, 231, 0.411);
-            border-radius: 10px;
-            outline: none;
-            &::placeholder {
-              color: #a9a9a9;
-            }
-          }
-
-          input:-webkit-autofill,
-          textarea:-webkit-autofill {
-            -webkit-box-shadow: 0 0 0 50px var(--third-bg-color) inset; /* Change the color to your own background color */
-            -webkit-text-fill-color: rgba(255, 255, 255, 0.4);
-            transition: background-color 600000s 0s,
-              var(--third-bg-color) 600000s 0s;
-          }
-          input[data-autocompleted],
-          textarea[data-autocompleted] {
-            background-color: transparent !important;
-          }
-
-          input:valid + label,
-          textarea:valid + label,
-          input:focus + label,
-          textarea:focus + label,
-          input:not(:placeholder-shown) + label {
-            z-index: 1;
-            color: #424242;
-            font-size: 0.8rem;
-            // top: -10px;
-            transform: translate(-5px, -20px);
-            pointer-events: none;
-          }
-        }
-
-        .contact-btn-wrapper {
-          display: flex;
-          // align-items: right;
-          justify-content: right;
-          button {
-            display: flex;
-            align-items: center;
-            text-align: center;
-            padding: 10px 20px;
-
-            // font-size: 16px;
-            font-size: 1.125rem;
-            color: #fff;
-            gap: 10px;
-            border: none;
-            // border-radius: 25px;
-            border-radius: 1rem;
-            background: #006451;
-            &:hover {
-              background: #038f75;
-            }
-          }
-        }
+      height: auto;
+      transform: translateY(3px);
+      path {
+        fill: #086453;
       }
     }
   }
-}
 
-.video-form-wrapper {
-  width: 100%;
-  position: relative;
-  .video-wrapper {
-    position: absolute;
-    // border: red solid 1px;
-    z-index: 10;
-    top: 0px;
-    left: 350px;
-    left: calc(70% - 250px);
-    video {
-      width: 350px;
-    }
-  }
-
-  .form-wrapper {
-    display: none;
-    opacity: 0;
-    margin-bottom: 30px;
-  }
-
-  .form-wrapper-anim {
-    // width: 600px;
-    margin: 0;
-    opacity: 1;
-    top: -20px;
-    left: -200px;
-    position: absolute;
-    z-index: 11;
-    // background-color: #353535;
+  .contact-content-wrapper {
+    background-color: var(--third-bg-color);
+    // height: 300px;
     padding: 20px;
-    padding-top: 10px;
-    // border-radius: 20px;
-    // transform: rotate(-1deg);
 
-    label {
-      pointer-events: none;
+    .mail-img-div {
+      padding-right: 20px;
+      height: 400px;
+      aspect-ratio: 3/4;
+      position: relative;
+      .gray-contact-img {
+        position: absolute;
+        inset: 0;
+        background-image: url('../../assets/me_mail_blackAndWhite.png');
+        background-size: cover;
+      }
+      .color-contact-img {
+        position: absolute;
+        inset: 0;
+        background-image: url('../../assets/me_mail.png');
+        background-size: cover;
 
-      // background-color: blue;
-    }
-    textarea {
-      resize: none;
-      background-color: var(--third-bg-color) !important;
-      & ~ label {
-        z-index: 2 !important;
-        background-color: var(--third-bg-color) !important;
+        -webkit-mask-image: url('../../assets/contact-mask.webp');
+        -webkit-mask-size: cover;
+        -webkit-mask-position: 0% 0%;
+
+        mask-image: url('../../assets/contact-mask.webp');
+        mask-size: cover;
+        mask-position: 0% 0%;
+
+        transition: mask-position;
+      }
+      .mask-animation {
+        animation: addColor 2s steps(15) forwards;
+      }
+
+      @keyframes addColor {
+        0% {
+          -webkit-mask-position: 0% 0%;
+          mask-position: 0% 0%;
+        }
+        100% {
+          -webkit-mask-position: 100% 0%;
+          mask-position: 100% 0%;
+        }
       }
     }
-    .input-wrapper {
-      margin-bottom: 0 !important;
-      margin-top: 1rem;
 
-      input:-webkit-autofill,
-      textarea:-webkit-autofill {
-        -webkit-box-shadow: 0 0 0 50px var(--third-bg-color) inset !important; /* Change the color to your own background color */
-        -webkit-text-fill-color: rgba(255, 255, 255, 0.4);
-        transition: background-color 600000s 0s,
-          var(--third-bg-color) 600000s 0s;
+    a {
+      color: rgb(94, 94, 196);
+      &:hover {
+        color: rgb(110, 110, 196);
       }
-    }
-  }
-}
-.canvas-Wrapper {
-  display: none;
-  opacity: 0;
-  position: absolute;
-  z-index: 11;
-  right: 0;
-  top: 0;
-}
-
-.svg-wrapper-bottom {
-  background-color: var(--third-bg-color);
-
-  .svg-section-transition-bottom {
-    width: 100%;
-    height: auto;
-    transform: translateY(3px);
-    path {
-      fill: #086453;
     }
   }
 }
