Replace png with webp for contact

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -37,13 +37,13 @@
       .gray-contact-img {
         position: absolute;
         inset: 0;
-        background-image: url('../../assets/me_mail_blackAndWhite.png');
+        background-image: url('../../assets/me_mail_blackAndWhite.webp');
         background-size: cover;
       }
       .color-contact-img {
         position: absolute;
         inset: 0;
-        background-image: url('../../assets/me_mail.png');
+        background-image: url('../../assets/me_mail.webp');
         background-size: cover;
 
         -webkit-mask-image: url('../../assets/contact-mask.webp');
